--- a/style.css
+++ b/style.css
@@ -1,1 +1,778 @@
-*,:after,:before{box-sizing:inherit;margin:0;padding:0}html{font-size:100%}body{box-sizing:border-box}:root{--color-page-bg:#f2f2f2;--color-text:#000;--color-primary:#0065fc;--color-secondary:#deebff;--color-border:#d9d9d9;--color-primary-shadow:hsla(0,0%,85%,.3);--color-secondary-shadow:hsla(0,0%,75%,.3);--color-hover-shadow:rgba(0,101,252,.2)}html{scroll-behavior:smooth}@media screen and (prefers-reduced-motion:reduce){html{scroll-behavior:auto}}body{color:var(--color-text);font-family:Raleway,sans-serif;font-size:18px}h1,h2{font-size:29px;letter-spacing:.006em}h1,h2,h3{font-weight:600}h3{font-size:22px}p{letter-spacing:.008em}a,p{font-size:21px}a{color:var(--color-text);text-decoration:none}ul{list-style:none}.pageWrapper{margin:0 3.5vw}.siteHeader{display:flex;flex-flow:row wrap;justify-content:space-between}.siteLinkHome{padding:62px 0 0 25px}.siteLogo{height:60px}.siteNav__list{margin:69px 0 4px}.siteNav__item{display:inline-block;margin:0 20px 0 0}.siteNav__link{letter-spacing:.014em;padding:69px 28px 4px 37px;position:relative}.siteNav__link:hover{color:var(--color-primary)}.siteNav__link:hover:before{background-color:var(--color-primary);content:"";height:3px;left:0;position:absolute;top:0;width:100%;z-index:0}.-active{color:var(--color-primary)}.-active:before{background-color:var(--color-primary);content:"";height:3px;left:0;position:absolute;top:0;width:100%;z-index:0}.sectionSearch{margin-top:44px}.sectionSearch__pageTitle{margin:16px 0 12px}.form{margin-top:26px}.inputGroup{align-items:center;display:flex}.inputGroup__iconMarker{background:var(--color-page-bg);border-radius:22px 0 0 22px;font-size:25px;padding:22px 26px 21px 25px}.inputGroup__text{border:none;border-bottom:1px solid var(--color-page-bg);border-top:1px solid var(--color-page-bg);flex-grow:1;font-size:24px;font-weight:600;max-width:320px;padding:19px}.inputGroup__btn{background:var(--color-primary);border:none;border-radius:0 22px 22px 0;color:#fff;cursor:pointer}.inputGroup__btn i{display:none}.-btnText{font-size:24px;font-weight:600;padding:19px}.filterGroup{align-items:center;display:flex;flex-flow:row wrap;margin-top:28px}.filterGroup__title{font-size:24px;font-weight:600;margin-right:2%;padding:.9% .8% 0 0}.filterGroup__list{display:flex;flex-flow:row wrap}.filterGroup__item{border:2px solid var(--color-border);border-radius:34px 30px 30px 34px;cursor:pointer;font-size:24px;font-weight:600;margin-top:13px;padding:18px 30px 18px 84px;position:relative;transition:all .4s}.filterGroup__item:not(:last-child){margin-right:32px}.filterGroup__item:before{background-color:var(--color-secondary);border-radius:50%;color:var(--color-primary);font-family:Font Awesome\ 5 Free;font-size:24px;font-weight:900;height:67px;left:-5px;padding-left:19px;padding-top:20px;position:absolute;top:-2px;width:67px}.filterGroup__item:first-child:before{content:"\f53a"}.filterGroup__item:nth-child(2):before{content:"\f1ae";padding-left:23px}.filterGroup__item:nth-child(3):before{content:"\f004";padding-left:21px}.filterGroup__item:nth-child(4):before{content:"\f6d3"}.filterGroup__item:hover{background-color:var(--color-secondary);border:2px solid var(--color-secondary);color:var(--color-primary)}.infoGroup{margin-top:47px}.infoGroup__hostNbr:before{border:1px solid var(--color-border);border-radius:50%;color:var(--color-primary);content:"\f129";font-family:Font Awesome\ 5 Free;font-size:17px;font-weight:600;height:32px;margin-right:20px;padding:8px 13px;width:32px}.sectionResult{display:flex;margin-top:50px}.searchResults{background-color:var(--color-page-bg);border-radius:26px;flex:1 1 66%;margin-right:2%;padding:3.5% 2% 2.6%}.searchResults__title{text-indent:3px}.cardsContainer{display:flex;flex-flow:row wrap;justify-content:space-around;margin-top:25px}.searchResults__more{margin-top:60px;text-indent:4px}.searchResults__moreLink{font-size:24px;font-weight:600}.cardsContainer__link{background-color:#fff;border-radius:26px;box-shadow:0 10px 20px var(--color-primary-shadow),0 6px 6px var(--color-secondary-shadow);display:inline-block;flex:1 1 30%;margin:1%;padding:7px;transition:all .3s cubic-bezier(.25,.8,.25,1)}.cardsContainer__link:hover{box-shadow:0 15px 25px var(--color-secondary-shadow),0 9px 9px var(--color-hover-shadow);color:var(--color-primary);transform:translateY(-2px)}.cardsContainer__img{border-radius:26px 26px 0 0;height:152px;min-width:200px;object-fit:cover;width:100%}.cardsContainer__info{padding:1% 5%}.cardsContainer__title{letter-spacing:-.015em}.cardsContainer__price{font-size:19px;letter-spacing:-.007em;margin-top:1%}.cardsContainer__lowCost{font-weight:600}.cardsContainer__hostRate{color:var(--color-primary);font-size:17px;margin-top:3%}.-greyStar{color:var(--color-border)}.mostPopular{background-color:var(--color-page-bg);border-radius:26px;flex:1 1 33%;padding:3.5% 3% 2.6% 2.7%}.mostPopular__title{display:flex;justify-content:space-between}.mostPopular__titleIcon{font-size:25px;padding-top:5px}.mostPopular__container{display:flex;flex-flow:column wrap;margin-top:25px}.mostPopular__link{background-color:#fff;border-radius:26px;box-shadow:0 10px 20px var(--color-primary-shadow),0 6px 6px var(--color-secondary-shadow);flex:1 1 auto;margin:10px;padding:7px;transition:all .3s cubic-bezier(.25,.8,.25,1)}.mostPopular__link:hover{box-shadow:0 15px 25px var(--color-secondary-shadow),0 9px 9px var(--color-hover-shadow);transform:translateY(-2px)}.mostPopular__card:hover .mostPopular__title{color:var(--color-primary)}.mostPopular__card{display:flex;flex-flow:row nowrap}.mostPopular__img{border-radius:26px 0 0 26px;height:179px;min-width:170px;object-fit:cover;width:170px}.mostPopular__info{display:flex;flex-direction:column;min-width:235px;padding:5% 6.6% 2.5% 5%}.mostPopular__title{letter-spacing:-.015em}.mostPopular__price{font-size:19px;letter-spacing:-.007em;margin-top:4%}.mostPopular__hostRate{color:var(--color-primary);font-size:16px;margin-top:auto}.activities{margin:80px 0}.activities__container{column-gap:3%;display:flex;margin-top:30px}.activities__containerCard:nth-child(2n){justify-content:space-between}.activities__containerCard{display:flex;flex:0 1 25%;flex-direction:column}.activities__link{border-radius:26px;box-shadow:0 10px 20px var(--color-primary-shadow),0 6px 6px var(--color-secondary-shadow);transition:all .3s cubic-bezier(.25,.8,.25,1)}.activities__link:hover{box-shadow:0 15px 25px var(--color-secondary-shadow),0 9px 9px var(--color-hover-shadow);color:var(--color-primary);transform:translateY(-2px)}.activities__cardImg{border-radius:26px 26px 0 0;height:520px;object-fit:cover;width:100%}.-h240{height:240px}.-h145{height:145px}.-h180{height:186px}.-h205{height:205px}.activities__cardTitle{padding:7% 7% 6%}.siteFooter{background-color:var(--color-page-bg);display:flex;gap:10px;padding:59px 3.5vw}.siteFooter__container{flex:0 1 33%}.siteFooter__title{font-size:24px;padding-bottom:5px}.siteFooter__item{padding-top:19px}.siteFooter__link{letter-spacing:.007em;transition:all .3s cubic-bezier(.25,.8,.25,1)}.siteFooter__link:hover{color:var(--color-primary)}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    font-family: 'Raleway', sans-serif ;
+}
+
+
+            /*HEADER*/
+
+header{
+    margin-left: 2em;
+    margin-right: 5em;
+}
+.headerimg{
+    height: 1.65em;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1.8em;
+}
+nav ul{
+    display: flex;
+    gap: 1.5em;
+}
+
+
+
+nav ul li:hover{
+    border-top: 4px solid #0065fc;
+    color: #0065fc;
+}
+
+@media screen and (max-width: 992px){
+    nav {
+      display: block;
+      border-bottom: 3px solid #f2f2f2;
+      padding-bottom: 20px;
+    }
+
+    nav ul{
+        display: flex;
+        justify-content: space-around;
+        margin-top: 2em;
+        gap: 2em;
+    }
+
+    .headerimg{
+        margin: auto;
+    }
+
+    nav ul li:hover{
+        border-bottom: 4px solid #0065fc;
+        color: #0065fc;
+    }
+}
+
+        /*SEARCHBAR*/
+.searchbar{
+    margin-top: 3em;
+    margin-left: 2em;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.search-map{
+    display: flex;
+    margin-top: 10px;
+}
+
+.search-map input{
+    font-weight: 600;
+    height: 40px;
+    width: 200px;
+    border: 1px solid #f2f2f2;
+    padding: 1.2em;
+}
+
+.search-map i{
+    background-color: #f2f2f2;
+    text-align: center;
+    border: 1px solid gray;
+    border-radius: 10px 0px 0px 10px;
+    height: 40px;
+    width: 40px;
+    padding: 10px;
+}
+
+.search-map button{
+    height: 40px;
+    width: 95px;
+    background-color: #0065fc;
+    border: 1px solid gray;
+    border-radius: 0 10px 10px 0;
+    color:white;
+    cursor: pointer;
+}
+
+    /*SEARCHFILTRE*/
+
+.searchfiltre{
+    margin-left: 2em;
+    margin-top: 2em;
+    display: flex;
+    align-items: center;
+    gap: 3.5em;
+}
+
+.searchcategoryfiltre{
+    display: flex;
+    gap: 3em;
+}
+
+.icon{
+    padding-left: 5px;
+    display: flex;
+    align-items: center;
+    border: 2px solid #dfdddf;
+    border-radius: 20px 20px 20px 20px;
+    cursor: pointer;
+    transition: 0.8s;
+}
+
+.icon:hover{
+    transform: scale(1.05);
+    color: blue;
+}
+
+.iconfiltre{
+    color: #0065fc;
+    padding: 10px;
+}
+
+.filtresolo{
+    font-weight: 600;
+    margin: 10px;
+    padding-right: 10px;
+}
+
+@media screen and (max-width: 992px){
+    .searchfiltre{
+        display: block;
+        align-items: center;
+    }
+    .searchcategoryfiltre{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-top: 1em;
+        gap: 1em;
+        }
+
+}
+
+
+/* INFORMATION LOGEMENTS*/
+.Informationlogements{
+    margin-left: 2em;
+    margin-top: 2em;
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
+.Informationlogements i{
+    border: 2px solid #F2F2F2;
+    border-radius: 50%;
+    height: 1.5em;
+    width: 1.5em;
+    padding: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0065fc;
+}
+
+
+
+
+/*HOSTING CARD PRINCIPAL*/
+
+.hostingcard{
+    background-color:#F2F2F2;
+    width: 65%;
+    height: 600px;
+    border-radius: 15px;
+    margin-left: 2em;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.cardbigtitle{
+    padding-top: 30px;
+    padding-left: 25px;
+}
+.cardblock{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    padding: 35px;
+}
+.card{
+    background-color: white;
+    height: 180px;
+    width: 200px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: .8s;
+}
+
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 6%);
+}
+
+.card img{
+    padding: 4px;
+    border-radius: 20px 20px 0px 0px;
+    height: 100px;
+    width: 100%;
+}
+
+.carddescription{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding-left: 5px;
+}
+
+
+.price{
+    font-weight: bold;
+}
+
+.colorblue{
+    color: #0065fc;
+}
+
+.colorgrey{
+    color: #dfdddf;
+}
+
+/* HOSTINGCARD ET HOSTINGCARD ASIDE COTE A COTE*/
+main{
+    display: flex;
+    align-items: center;
+    gap: 2.5em;
+
+}
+/*SECTION HOSTING CARD ASIDE*/
+
+.hostingcardaside{
+    height: 600px;
+    width: 35%;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    margin-right: 30px;
+    border-radius: 15px;
+    background-color: #F2F2F2;
+}
+
+.hostingcardasidetitle{
+    padding-top: 30px;
+    padding-left: 25px;
+    margin-bottom: 15px;
+}
+
+.cardblockaside{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.cardaside{
+    display: flex;
+    height: 136px;
+    width: 290px;
+    border: 1px;
+    background-color: white;
+    border-radius: 15px;
+    margin-top: 0.9em;
+    transition: 0.8s;
+    cursor: pointer;
+}
+
+.cardaside:hover{
+    transform: scale(1.05);
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 6%);
+}
+
+.imgcardaside{
+    width: 110px;
+    height: 135px;
+    object-fit: cover;
+    padding: 4px;
+    border-radius: 15px 0px 0px 15px;
+}
+
+.etoileaside{
+    display: flex;
+    align-items: flex-end;
+}
+
+.carddescriptionaside{
+    margin-left: 0.6em;
+    margin-top: 0.6em;
+    margin-bottom: 0.6em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.cardasidetitle{
+    font-weight: bold;
+}
+
+.priceasidedescription{
+    margin-bottom: 1.4em;
+}
+
+/*Section activités à Marseille*/
+
+.activitymarseille{
+    margin-left: 2em;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.activitycardblock{
+    display: flex;
+    justify-content: flex-start;
+    gap: 40px;
+    margin-top: 2em;
+}
+
+
+
+.cardactivitymarseille{
+    height: 390px;
+    width: 260px;
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 6%);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.pictureactivity{
+    height: 350px;
+    width: 259px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.descriptionactivity{
+    margin-left: 12px;
+    margin-top: 10px;
+}
+
+
+/*FOOTER*/
+
+footer{
+    background-color: #F2F2F2;
+    width: 90%;
+    margin-left: 2em;
+    margin-top: 5em;
+    margin-bottom: 2em;
+}
+
+.footerblock{
+    display: flex;
+    justify-content: space-around;
+}
+
+.footerelementtitle{
+    margin-bottom: 11px;
+}
+
+.footerelement{
+    margin: 1.5em;
+}
+@media screen {
+    *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    font-family: 'Raleway', sans-serif ;
+}
+
+
+            /*HEADER*/
+
+header{
+    margin-left: 2em;
+    margin-right: 5em;
+}
+.headerimg{
+    height: 1.65em;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1.8em;
+}
+nav ul{
+    display: flex;
+    gap: 1.5em;
+}
+
+
+
+nav ul li:hover{
+    border-top: 4px solid #0065fc;
+    color: #0065fc;
+}
+
+@media screen and (max-width: 992px){
+    nav {
+      display: block;
+      border-bottom: 3px solid #f2f2f2;
+      padding-bottom: 20px;
+    }
+
+    nav ul{
+        display: flex;
+        justify-content: space-around;
+        margin-top: 2em;
+        gap: 2em;
+    }
+
+    .headerimg{
+        margin: auto;
+    }
+
+    nav ul li:hover{
+        border-bottom: 4px solid #0065fc;
+        color: #0065fc;
+    }
+}
+
+        /*SEARCHBAR*/
+.searchbar{
+    margin-top: 3em;
+    margin-left: 2em;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.search-map{
+    display: flex;
+    margin-top: 10px;
+}
+
+.search-map input{
+    font-weight: 600;
+    height: 40px;
+    width: 200px;
+    border: 1px solid #f2f2f2;
+    padding: 1.2em;
+}
+
+.search-map i{
+    background-color: #f2f2f2;
+    text-align: center;
+    border: 1px solid gray;
+    border-radius: 10px 0px 0px 10px;
+    height: 40px;
+    width: 40px;
+    padding: 10px;
+}
+
+.search-map button{
+    height: 40px;
+    width: 95px;
+    background-color: #0065fc;
+    border: 1px solid gray;
+    border-radius: 0 10px 10px 0;
+    color:white;
+    cursor: pointer;
+}
+
+    /*SEARCHFILTRE*/
+
+.searchfiltre{
+    margin-left: 2em;
+    margin-top: 2em;
+    display: flex;
+    align-items: center;
+    gap: 3.5em;
+}
+
+.searchcategoryfiltre{
+    display: flex;
+    gap: 3em;
+}
+
+.icon{
+    padding-left: 5px;
+    display: flex;
+    align-items: center;
+    border: 2px solid #dfdddf;
+    border-radius: 20px 20px 20px 20px;
+    cursor: pointer;
+    transition: 0.8s;
+}
+
+.icon:hover{
+    transform: scale(1.05);
+    color: blue;
+}
+
+.iconfiltre{
+    color: #0065fc;
+    padding: 10px;
+}
+
+.filtresolo{
+    font-weight: 600;
+    margin: 10px;
+    padding-right: 10px;
+}
+
+@media screen and (max-width: 992px){
+    .searchfiltre{
+        display: block;
+        align-items: center;
+    }
+    .searchcategoryfiltre{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-top: 1em;
+        gap: 1em;
+        }
+
+}
+
+
+/* INFORMATION LOGEMENTS*/
+.Informationlogements{
+    margin-left: 2em;
+    margin-top: 2em;
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
+.Informationlogements i{
+    border: 2px solid #F2F2F2;
+    border-radius: 50%;
+    height: 1.5em;
+    width: 1.5em;
+    padding: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0065fc;
+}
+
+
+
+
+/*HOSTING CARD PRINCIPAL*/
+
+.hostingcard{
+    background-color:#F2F2F2;
+    width: 65%;
+    height: 600px;
+    border-radius: 15px;
+    margin-left: 2em;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.cardbigtitle{
+    padding-top: 30px;
+    padding-left: 25px;
+}
+.cardblock{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    padding: 35px;
+}
+.card{
+    background-color: white;
+    height: 180px;
+    width: 200px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: .8s;
+}
+
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 6%);
+}
+
+.card img{
+    padding: 4px;
+    border-radius: 20px 20px 0px 0px;
+    height: 100px;
+    width: 100%;
+}
+
+.carddescription{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding-left: 5px;
+}
+
+
+.price{
+    font-weight: bold;
+}
+
+.colorblue{
+    color: #0065fc;
+}
+
+.colorgrey{
+    color: #dfdddf;
+}
+
+/* HOSTINGCARD ET HOSTINGCARD ASIDE COTE A COTE*/
+main{
+    display: flex;
+    align-items: center;
+    gap: 2.5em;
+
+}
+/*SECTION HOSTING CARD ASIDE*/
+
+.hostingcardaside{
+    height: 600px;
+    width: 35%;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    margin-right: 30px;
+    border-radius: 15px;
+    background-color: #F2F2F2;
+}
+
+.hostingcardasidetitle{
+    padding-top: 30px;
+    padding-left: 25px;
+    margin-bottom: 15px;
+}
+
+.cardblockaside{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.cardaside{
+    display: flex;
+    height: 136px;
+    width: 290px;
+    border: 1px;
+    background-color: white;
+    border-radius: 15px;
+    margin-top: 0.9em;
+    transition: 0.8s;
+    cursor: pointer;
+}
+
+.cardaside:hover{
+    transform: scale(1.05);
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 6%);
+}
+
+.imgcardaside{
+    width: 110px;
+    height: 135px;
+    object-fit: cover;
+    padding: 4px;
+    border-radius: 15px 0px 0px 15px;
+}
+
+.etoileaside{
+    display: flex;
+    align-items: flex-end;
+}
+
+.carddescriptionaside{
+    margin-left: 0.6em;
+    margin-top: 0.6em;
+    margin-bottom: 0.6em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.cardasidetitle{
+    font-weight: bold;
+}
+
+.priceasidedescription{
+    margin-bottom: 1.4em;
+}
+
+/*Section activités à Marseille*/
+
+.activitymarseille{
+    margin-left: 2em;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.activitycardblock{
+    display: flex;
+    justify-content: flex-start;
+    gap: 40px;
+    margin-top: 2em;
+}
+
+
+
+.cardactivitymarseille{
+    height: 390px;
+    width: 260px;
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 6%);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.pictureactivity{
+    height: 350px;
+    width: 259px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.descriptionactivity{
+    margin-left: 12px;
+    margin-top: 10px;
+}
+
+
+/*FOOTER*/
+
+footer{
+    background-color: #F2F2F2;
+    width: 90%;
+    margin-left: 2em;
+    margin-top: 5em;
+    margin-bottom: 2em;
+}
+
+.footerblock{
+    display: flex;
+    justify-content: space-around;
+}
+
+.footerelementtitle{
+    margin-bottom: 11px;
+}
+
+.footerelement{
+    margin: 1.5em;
+}
+}
